# cvsite

./: .gitignore  CNAME  Cargo.toml  README.md  Trunk.toml  cvsite-2b4705785d1932e2.js  cvsite-2b4705785d1932e2_bg.wasm  cvsite-2f739234987151ef.js  cvsite-4893874c1f012a2f.js  cvsite-4893874c1f012a2f_bg.wasm  cvsite-4b02171822c20f0e.js  cvsite-4b02171822c20f0e_bg.wasm  cvsite-5364e6271812151a.js  cvsite-5364e6271812151a_bg.wasm  cvsite-56d616200029ef60.js  cvsite-56d616200029ef60_bg.wasm  cvsite-680790360a1fc288.js  cvsite-680790360a1fc288_bg.wasm  cvsite-75fad266a172cd60.js  cvsite-75fad266a172cd60_bg.wasm  cvsite-76148f781311cf5e.js  cvsite-76148f781311cf5e_bg.wasm  cvsite-7d4af4dc6fa81fc8.js  cvsite-7d4af4dc6fa81fc8_bg.wasm  cvsite-822fa6665b817f8d.js  cvsite-822fa6665b817f8d_bg.wasm  cvsite-c41fcac3c7f02f19.js  cvsite-c41fcac3c7f02f19_bg.wasm  cvsite-c59f6036df3aac8e.js  cvsite-c59f6036df3aac8e_bg.wasm  cvsite-ccafc7c709f7d885.js  cvsite-ccafc7c709f7d885_bg.wasm  cvsite-d43040f1e81a77d5.js  cvsite-d43040f1e81a77d5_bg.wasm  cvsite-d6d37c68cd0e3a24.js  cvsite-d6d37c68cd0e3a24_bg.wasm  cvsite-ddcc07ea9dac76fa.js  cvsite-ddcc07ea9dac76fa_bg.wasm  cvsite-e47d12338f106067.js  cvsite-e47d12338f106067_bg.wasm  (+7 more)
.github/workflows/: deploy.yml  rust.yml
.sass-cache/5516a07f48f445d6f248fbaec14631a8dc0e5de6/: main.scssc
src/: app.rs  components.rs  lib.rs  main.rs  models.rs  pages.rs  utils.rs
src/components/: cursor.rs  infosection.rs  messages.rs  neofetch.rs  picture.rs  skill.rs  terminal_pane.rs
src/models/: fetchitem.rs  project.rs  (+1 more)
style/: main.scss  output.css
(+2 files in other folders)
