[package]
name = "cvsite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.5", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
leptos_router = { version = "0.5", features = ["nightly", "csr"] }
leptos_meta = { version = "0.5", features = ["nightly", "csr"] }
cfg-if = "1"
chrono = "0.4.31"
emojic = "0.4.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
